Build: Make tfm_boot_status private in tfm_sprt
The main head file in tfm_boot_status is tfm_boot_status.h. To make it
more specific, it can be moved under an individual directory.

tfm_boot_status is required by FWU and attestation. This patch makes
tfm_sprt link the tfm_boot_status as PRIVATE. So FWU and attestation
have to explicitly link tfm_boot_status.

Signed-off-by: Jianliang Shen <jianliang.shen@arm.com>
Change-Id: I422ffbca1ead9611b3e89697ac891231945726f8

--- a/secure_fw/partitions/initial_attestation/CMakeLists.txt
+++ b/secure_fw/partitions/initial_attestation/CMakeLists.txt
@@ -1,5 +1,5 @@
 #-------------------------------------------------------------------------------
-# Copyright (c) 2020-2021, Arm Limited. All rights reserved.
+# Copyright (c) 2020-2022, Arm Limited. All rights reserved.
 #
 # SPDX-License-Identifier: BSD-3-Clause
 #
@@ -64,6 +64,7 @@ target_link_libraries(tfm_psa_rot_partition_attestation
         secure_fw
         psa_interface
         tfm_sprt
+        tfm_boot_status
 )
 
 target_compile_definitions(tfm_psa_rot_partition_attestation
