Crypto: Enable MM-IOVEC
The MM-IOVEC is a feature of FF-M v1.1 to allow Secure Partitions
to access client buffers directly.
With this feature, Secure Partitions do not need transient buffers
to store client buffers so that can save RAM size.
And there is also no memory copy so the performance should be better
as well.

This patch also re-organizes the codes for better reading.

Change-Id: I488d046a53dc6a122a3b2b59adc360448a8e4bdb
Signed-off-by: Kevin Peng <kevin.peng@arm.com>

--- a/secure_fw/partitions/crypto/tfm_crypto.yaml
+++ b/secure_fw/partitions/crypto/tfm_crypto.yaml
@@ -478,7 +478,8 @@
       "connection_based": false,
       "stateless_handle": 1,
       "version": 1,
-      "version_policy": "STRICT"
+      "version_policy": "STRICT",
+      "mm_iovec": "enable"
     },
   ],
   "dependencies": [
