ITS: Enable MM-IOVEC for asset_data buffer
Change-Id: I639984ede24c6733d3640b422ccddcd0e460bf38
Signed-off-by: Kevin Peng <kevin.peng@arm.com>

--- a/secure_fw/partitions/internal_trusted_storage/tfm_internal_trusted_storage.yaml
+++ b/secure_fw/partitions/internal_trusted_storage/tfm_internal_trusted_storage.yaml
@@ -51,7 +51,8 @@
       "connection_based": false,
       "stateless_handle": 3,
       "version": 1,
-      "version_policy": "STRICT"
+      "version_policy": "STRICT",
+      "mm_iovec": "enable",
     }
   ]
 }
