SFN: Support initialize SFN partitions by priority
IPC partitions get initialized by the priority, the SFN partitions
also has this requirement in some cases. For example, secure test
partition is inited before basic partitions (Crypto, ITS).This
causes an issue that the service timing of first call to request
a partition is very large because it includes the partition
initialization process. To get accurate performance data, we should
deprecate the first call data.

In order to simplify the performance test, the basic partition
initialization process had better be in front of secure test partition.

Signed-off-by: Jianliang Shen <jianliang.shen@arm.com>
Change-Id: I3ce03e971a80826be18ad945a1bd1f96e5201cae

--- a/platform/ext/common/iar/tfm_isolation_l3.icf.template
+++ b/platform/ext/common/iar/tfm_isolation_l3.icf.template
@@ -53,8 +53,15 @@ define block ER_TFM_CODE with fixed order, alignment = 8 {
     ro object *libtfm_spm*
 };
     /**** Section for holding partition RO load data */
+    /*
+     * Sort the partition info by priority to guarantee the initing order.
+     * The first loaded partition will be inited at last in SFN model.
+     */
 define block TFM_SP_LOAD_LIST with alignment = 4 {
-    ro section .part_load object load_info_*.o,
+    ro section .part_load_priority_lowest object load_info_*.o,
+    ro section .part_load_priority_low object load_info_*.o,
+    ro section .part_load_priority_normal object load_info_*.o,
+    ro section .part_load_priority_high object load_info_*.o,
 };
 
 #if defined(S_CODE_SRAM_ALIAS_BASE)
@@ -118,12 +125,20 @@ keep {block HEAP, block ARM_LIB_HEAP};
 
 define block ER_TFM_DATA          with alignment = 8 {readwrite};
 
+/* The runtime partition placed order is same as load partition */
 define block ER_PART_RT_POOL      with alignment = 4 {
-    zi section .bss.part_runtime
+    zi section .bss.part_runtime_priority_lowest,
+    zi section .bss.part_runtime_priority_low,
+    zi section .bss.part_runtime_priority_normal,
+    zi section .bss.part_runtime_priority_high,
 };
 
+/* The runtime service placed order is same as load partition */
 define block ER_SERV_RT_POOL      with alignment = 4 {
-    zi section .bss.serv_runtime
+    zi section .bss.serv_runtime_priority_lowest,
+    zi section .bss.serv_runtime_priority_low,
+    zi section .bss.serv_runtime_priority_normal,
+    zi section .bss.serv_runtime_priority_high,
 };
 
 keep {block ER_PART_RT_POOL, block ER_SERV_RT_POOL};
