--- a/tools/templates/partition_load_info.template
+++ b/tools/templates/partition_load_info.template
@@ -93,11 +93,11 @@ struct partition_{{manifest.name|lower}}_load_info_t {
 
 /* Partition load, deps, service load data. Put to a dedicated section. */
 #if defined(__ICCARM__)
-#pragma location = ".part_load"
+#pragma location = ".part_load_priority_{{manifest.priority|lower}}"
 __root
 #endif /* __ICCARM__ */
 const struct partition_{{manifest.name|lower}}_load_info_t {{manifest.name|lower}}_load
-    __attribute__((used, section(".part_load"))) = {
+    __attribute__((used, section(".part_load_priority_{{manifest.priority|lower}}"))) = {
     .load_info = {
 {% if manifest.psa_framework_version == 1.0 %}
         .psa_ff_ver                 = 0x0100 | PARTITION_INFO_MAGIC,
@@ -276,16 +276,16 @@ const struct partition_{{manifest.name|lower}}_load_info_t {{manifest.name|lower
 
 /* Placeholder for partition and service runtime space. Do not reference it. */
 #if defined(__ICCARM__)
-#pragma location=".bss.part_runtime"
+#pragma location=".bss.part_runtime_priority_{{manifest.priority|lower}}"
 __root
 #endif /* __ICCARM__ */
 static struct partition_t {{manifest.name|lower}}_partition_runtime_item
-    __attribute__((used, section(".bss.part_runtime")));
+    __attribute__((used, section(".bss.part_runtime_priority_{{manifest.priority|lower}}")));
 {% if counter.service_counter > 0 %}
 #if defined(__ICCARM__)
-#pragma location = ".bss.serv_runtime"
+#pragma location = ".bss.serv_runtime_priority_{{manifest.priority|lower}}"
 __root
 #endif /* __ICCARM__ */
 static struct service_t {{manifest.name|lower}}_service_runtime_item[{{(manifest.name|upper + "_NSERVS")}}]
-    __attribute__((used, section(".bss.serv_runtime")));
+    __attribute__((used, section(".bss.serv_runtime_priority_{{manifest.priority|lower}}")));
 {% endif %}
