--- a/platform/ext/common/armclang/tfm_isolation_l3.sct.template
+++ b/platform/ext/common/armclang/tfm_isolation_l3.sct.template
@@ -64,8 +64,15 @@ LR_CODE S_CODE_START S_CODE_SIZE {
     }
 
     /**** Section for holding partition RO load data */
+    /*
+     * Sort the partition info by priority to guarantee the initing order.
+     * The first loaded partition will be inited at last in SFN model.
+     */
     TFM_SP_LOAD_LIST +0 ALIGN 4 {
-        *(.part_load)
+        *(.part_load_priority_lowest)
+        *(.part_load_priority_low)
+        *(.part_load_priority_normal)
+        *(.part_load_priority_high)
     }
 
     /**** PSA RoT CODE + RO-data starts here */
@@ -144,12 +151,20 @@ LR_CODE S_CODE_START S_CODE_SIZE {
         * (+RW +ZI)
     }
 
+    /**** The runtime partition placed order is same as load partition */
     ER_PART_RT_POOL +0 ALIGN 4 {
-        *(.bss.part_runtime)
+        *(.bss.part_runtime_priority_lowest)
+        *(.bss.part_runtime_priority_low)
+        *(.bss.part_runtime_priority_normal)
+        *(.bss.part_runtime_priority_high)
     }
 
+    /**** The runtime service placed order is same as load partition */
     ER_SERV_RT_POOL +0 ALIGN 4 {
-        *(.bss.serv_runtime)
+        *(.bss.serv_runtime_priority_lowest)
+        *(.bss.serv_runtime_priority_low)
+        *(.bss.serv_runtime_priority_normal)
+        *(.bss.serv_runtime_priority_high)
     }
 
     /**** PSA RoT RWZI starts here */
