--- a/tools/tfm_manifest_list.yaml
+++ b/tools/tfm_manifest_list.yaml
@@ -1,5 +1,5 @@
 #-------------------------------------------------------------------------------
-# Copyright (c) 2018-2021, Arm Limited. All rights reserved.
+# Copyright (c) 2018-2022, Arm Limited. All rights reserved.
 # Copyright (c) 2021-2022 Cypress Semiconductor Corporation (an Infineon company)
 # or an affiliate of Cypress Semiconductor Corporation. All rights reserved.
 #
@@ -25,9 +25,9 @@
     {
       "name": "Non-Secure Mailbox Agent",
       "short_name": "TFM_NS_AGENT_MAILBOX",
-      "manifest": "${CMAKE_SOURCE_DIR}/secure_fw/partitions/ns_agent_mailbox/ns_agent_mailbox.yaml",
+      "manifest": "../secure_fw/partitions/ns_agent_mailbox/ns_agent_mailbox.yaml",
       "output_path": "secure_fw/partitions/ns_agent_mailbox",
-      "conditional": "@TFM_PARTITION_NS_AGENT_MAILBOX@",
+      "conditional": "TFM_PARTITION_NS_AGENT_MAILBOX",
       "version_major": 0,
       "version_minor": 1,
       "pid": 0,
@@ -40,9 +40,9 @@
     {
       "name": "Protected Storage Service",
       "short_name": "TFM_SP_PS",
-      "manifest": "${CMAKE_SOURCE_DIR}/secure_fw/partitions/protected_storage/tfm_protected_storage.yaml",
+      "manifest": "../secure_fw/partitions/protected_storage/tfm_protected_storage.yaml",
       "output_path": "secure_fw/partitions/protected_storage",
-      "conditional": "@TFM_PARTITION_PROTECTED_STORAGE@",
+      "conditional": "TFM_PARTITION_PROTECTED_STORAGE",
       "version_major": 0,
       "version_minor": 1,
       "pid": 256,
@@ -55,9 +55,9 @@
     {
       "name": "TF-M Internal Trusted Storage Service",
       "short_name": "TFM_SP_ITS",
-      "manifest": "${CMAKE_SOURCE_DIR}/secure_fw/partitions/internal_trusted_storage/tfm_internal_trusted_storage.yaml",
+      "manifest": "../secure_fw/partitions/internal_trusted_storage/tfm_internal_trusted_storage.yaml",
       "output_path": "secure_fw/partitions/internal_trusted_storage",
-      "conditional": "@TFM_PARTITION_INTERNAL_TRUSTED_STORAGE@",
+      "conditional": "TFM_PARTITION_INTERNAL_TRUSTED_STORAGE",
       "version_major": 0,
       "version_minor": 1,
       "pid": 257,
@@ -70,9 +70,9 @@
     {
       "name": "TFM Audit Log Service",
       "short_name": "TFM_SP_AUDIT_LOG",
-      "manifest": "${CMAKE_SOURCE_DIR}/secure_fw/partitions/audit_logging/tfm_audit_logging.yaml",
+      "manifest": "../secure_fw/partitions/audit_logging/tfm_audit_logging.yaml",
       "output_path": "secure_fw/partitions/audit_logging",
-      "conditional": "@TFM_PARTITION_AUDIT_LOG@",
+      "conditional": "TFM_PARTITION_AUDIT_LOG",
       "version_major": 0,
       "version_minor": 1,
       "pid": 255,
@@ -85,9 +85,9 @@
     {
       "name": "TFM Crypto Service",
       "short_name": "TFM_SP_CRYPTO",
-      "manifest": "${CMAKE_SOURCE_DIR}/secure_fw/partitions/crypto/tfm_crypto.yaml",
+      "manifest": "../secure_fw/partitions/crypto/tfm_crypto.yaml",
       "output_path": "secure_fw/partitions/crypto",
-      "conditional": "@TFM_PARTITION_CRYPTO@",
+      "conditional": "TFM_PARTITION_CRYPTO",
       "version_major": 0,
       "version_minor": 1,
       "pid": 259,
@@ -100,9 +100,9 @@
     {
       "name": "TFM Platform Service",
       "short_name": "TFM_SP_PLATFORM",
-      "manifest": "${CMAKE_SOURCE_DIR}/secure_fw/partitions/platform/tfm_platform.yaml",
+      "manifest": "../secure_fw/partitions/platform/tfm_platform.yaml",
       "output_path": "secure_fw/partitions/platform",
-      "conditional": "@TFM_PARTITION_PLATFORM@",
+      "conditional": "TFM_PARTITION_PLATFORM",
       "version_major": 0,
       "version_minor": 1,
       "pid": 260,
@@ -115,9 +115,9 @@
     {
       "name": "TFM Initial Attestation Service",
       "short_name": "TFM_SP_INITIAL_ATTESTATION",
-      "manifest": "${CMAKE_SOURCE_DIR}/secure_fw/partitions/initial_attestation/tfm_initial_attestation.yaml",
+      "manifest": "../secure_fw/partitions/initial_attestation/tfm_initial_attestation.yaml",
       "output_path": "secure_fw/partitions/initial_attestation",
-      "conditional": "@TFM_PARTITION_INITIAL_ATTESTATION@",
+      "conditional": "TFM_PARTITION_INITIAL_ATTESTATION",
       "version_major": 0,
       "version_minor": 1,
       "pid": 261,
@@ -130,10 +130,10 @@
     {
       "name": "TF-M PSA Proxy Service",
       "short_name": "TFM_SP_PSA_PROXY",
-      "manifest": "${CMAKE_SOURCE_DIR}/secure_fw/partitions/psa_proxy/tfm_psa_proxy.yaml",
+      "manifest": "../secure_fw/partitions/psa_proxy/tfm_psa_proxy.yaml",
       "output_path": "secure_fw/partitions/psa_proxy",
       "tfm_extensions": true,
-      "conditional": "@TFM_PARTITION_PSA_PROXY@",
+      "conditional": "TFM_PARTITION_PSA_PROXY",
       "version_major": 0,
       "version_minor": 1,
       "pid": 270,
@@ -146,9 +146,9 @@
     {
       "name": "TFM Firmware Update Service",
       "short_name": "TFM_SP_FWU",
-      "manifest": "${CMAKE_SOURCE_DIR}/secure_fw/partitions/firmware_update/tfm_firmware_update.yaml",
+      "manifest": "../secure_fw/partitions/firmware_update/tfm_firmware_update.yaml",
       "output_path": "secure_fw/partitions/firmware_update",
-      "conditional": "@TFM_PARTITION_FIRMWARE_UPDATE@",
+      "conditional": "TFM_PARTITION_FIRMWARE_UPDATE",
       "version_major": 0,
       "version_minor": 1,
       "pid": 271,
