SPRT: Rename the folder name to 'runtime'
The original name 'sprt' can be confusing if user did not read
SPRTL related document, hence rename it as 'runtime' to
indicate it is a secure partition runtime API set.

Signed-off-by: Ken Liu <Ken.Liu@arm.com>
Change-Id: I3ba7d5e80dd2ee32d52463bcdf012a2f5bf6017c

--- a/secure_fw/partitions/CMakeLists.txt
+++ b/secure_fw/partitions/CMakeLists.txt
@@ -20,7 +20,7 @@ target_link_libraries(tfm_partitions
 # directories of the partitions
 add_library(tfm_partition_defs INTERFACE)
 
-add_subdirectory(lib/sprt)
+add_subdirectory(lib/runtime)
 add_subdirectory(audit_logging)
 add_subdirectory(crypto)
 add_subdirectory(initial_attestation)
