--- a/secure_fw/partitions/initial_attestation/tfm_initial_attestation.yaml
+++ b/secure_fw/partitions/initial_attestation/tfm_initial_attestation.yaml
@@ -12,7 +12,7 @@
   "priority": "NORMAL",
   "model": "SFN",
   "entry_init": "attest_partition_init",
-  "stack_size": "0xA20",
+  "stack_size": "0x0A80",
   "secure_functions": [
     {
       "name": "TFM_ATTEST_GET_TOKEN",
