PARTITIONS: Adjust the stack size of partitions
Adjust the stack size of partitions based on the data via
CONFIG_TFM_STACK_WATERMARKS.

Signed-off-by: Sherry Zhang <sherry.zhang2@arm.com>
Change-Id: I356c3cfea75941e331083d236652d8bf3e2449f9

--- a/secure_fw/partitions/crypto/tfm_crypto.yaml
+++ b/secure_fw/partitions/crypto/tfm_crypto.yaml
@@ -12,7 +12,7 @@
   "priority": "NORMAL",
   "model": "SFN",
   "entry_init": "tfm_crypto_init",
-  "stack_size": "0x2000",
+  "stack_size": "0x1B00",
   "secure_functions": [
     {
       "name": "TFM_CRYPTO_GET_KEY_ATTRIBUTES",
