Build: Refine tfm_sp_log_raw library build
Improve tfm_sp_log_raw library include and linking.
Therefore Secure Partition can directly link tfm_sp_log_raw.

Update Corstone 1000 platform test build then.

Change-Id: I9f571e2eca31fc080a87fc28a273f66bf628721f
Signed-off-by: David Hu <david.hu@arm.com>

--- a/secure_fw/partitions/lib/runtime/CMakeLists.txt
+++ b/secure_fw/partitions/lib/runtime/CMakeLists.txt
@@ -71,7 +71,14 @@ if (TFM_SP_LOG_RAW_ENABLED)
     target_link_libraries(tfm_sp_log_raw
         INTERFACE
             platform_s
-            tfm_partition_defs
+            psa_interface
             tfm_secure_api
+    )
+
+    target_compile_definitions(tfm_sp_log_raw
+        INTERFACE
+            $<$<BOOL:${TFM_PSA_API}>:TFM_PSA_API>
+            TFM_PARTITION_LOG_LEVEL=${TFM_PARTITION_LOG_LEVEL}
+            TFM_SP_LOG_RAW_ENABLED
     )
 endif()
