ns_agent_tz: Remove redundant conditionals
Since commit 0d37310a1d515ad18e121069c0d381ca9fb22859, the conditionals
within the file are redundant with the one at the very start of it.

Change-Id: I380e22cf41113ba3d14067a6608db8e0c62f7237
Signed-off-by: Chris Brand <chris.brand@cypress.com>

--- a/secure_fw/partitions/ns_agent_tz/CMakeLists.txt
+++ b/secure_fw/partitions/ns_agent_tz/CMakeLists.txt
@@ -1,6 +1,7 @@
 #-------------------------------------------------------------------------------
 # Copyright (c) 2021, Arm Limited. All rights reserved.
-# Copyright (c) 2021, Cypress Semiconductor Corporation. All rights reserved.
+# Copyright (c) 2021-2022 Cypress Semiconductor Corporationn (an Infineon company)
+# or an affiliate of Cypress Semiconductor Corporation. All rights reserved.
 #
 # SPDX-License-Identifier: BSD-3-Clause
 #
@@ -19,7 +20,7 @@ endif()
 
 target_sources(tfm_spm
     PRIVATE
-        $<$<NOT:$<BOOL:${TFM_MULTI_CORE_TOPOLOGY}>>:${CMAKE_CURRENT_SOURCE_DIR}/ns_agent_tz.c>
+        ${CMAKE_CURRENT_SOURCE_DIR}/ns_agent_tz.c
 )
 
 target_sources(tfm_partitions
@@ -32,5 +33,5 @@ target_sources(tfm_partitions
 # instead this single file is added to the tfm_s target.
 target_sources(tfm_s
     PRIVATE
-        $<$<NOT:$<BOOL:${TFM_MULTI_CORE_TOPOLOGY}>>:${CMAKE_CURRENT_SOURCE_DIR}/tfm_psa_api_veneers.c>
+        ${CMAKE_CURRENT_SOURCE_DIR}/tfm_psa_api_veneers.c
 )
