SPM: Refine the static loader
Rename the filename to 'static_loader' instead of 'static_load'
to make more sense. And remove explicit backend related ifdefs
in the source file which makes the source no coupling with
configuration switches.

Signed-off-by: Ken Liu <Ken.Liu@arm.com>
Change-Id: I7e05a52e7858fa1c5ae1fb3bdac0b2298736a34d

--- a/secure_fw/spm/CMakeLists.txt
+++ b/secure_fw/spm/CMakeLists.txt
@@ -48,7 +48,7 @@ target_sources(tfm_spm
         $<$<BOOL:${TFM_PSA_API}>:cmsis_psa/main.c>
         $<$<BOOL:${TFM_PSA_API}>:cmsis_psa/spm_ipc.c>
         $<$<BOOL:${CONFIG_TFM_PSA_API_CROSS_CALL}>:cmsis_psa/spm_cross_call.c>
-        $<$<BOOL:${TFM_PSA_API}>:cmsis_psa/static_load.c>
+        $<$<BOOL:${TFM_PSA_API}>:cmsis_psa/static_loader.c>
         $<$<BOOL:${TFM_PSA_API}>:ffm/psa_api.c>
         $<$<BOOL:${CONFIG_TFM_SPM_BACKEND_IPC}>:ffm/backend_ipc.c>
         $<$<BOOL:${CONFIG_TFM_SPM_BACKEND_SFN}>:ffm/backend_sfn.c>
