platform: Fix exception handlers not overiding default implementations
Fix regression introduced by: 2e4348963610787aaa0e9cf14fe45af697b6c464.
The commit moved the exception handlers from the tfm_s library to the
platform_s library.
This causes the fault handlers to be discarded since they are not used
and they are not overriding the startup files' weak handlers.
Move the fault handlers to the tfm_s library to fix this problem.

Change-Id: Icea99165fa0867fae1bcdf5589f569435d79da17
Signed-off-by: Joakim Andersson <joakim.andersson@nordicsemi.no>

--- a/platform/CMakeLists.txt
+++ b/platform/CMakeLists.txt
@@ -55,7 +55,6 @@ target_sources(platform_s
         $<$<BOOL:${PLATFORM_DEFAULT_UART_STDOUT}>:${CMAKE_CURRENT_SOURCE_DIR}/ext/common/uart_stdout.c>
         $<$<BOOL:${TFM_SPM_LOG_RAW_ENABLED}>:ext/common/tfm_hal_spm_logdev_peripheral.c>
         $<$<BOOL:${TFM_EXCEPTION_INFO_DUMP}>:ext/common/exception_info.c>
-        ext/common/faults.c
         ext/common/tfm_hal_memory_symbols.c
         $<$<BOOL:${PLATFORM_DEFAULT_ATTEST_HAL}>:ext/common/template/attest_hal.c>
         $<$<BOOL:${PLATFORM_DEFAULT_NV_COUNTERS}>:ext/common/template/nv_counters.c>
@@ -66,6 +65,14 @@ target_sources(platform_s
         $<$<OR:$<BOOL:${PLATFORM_DEFAULT_NV_COUNTERS}>,$<BOOL:${PLATFORM_DEFAULT_OTP}>>:ext/common/template/flash_otp_nv_counters_backend.c>
         $<$<BOOL:${PLATFORM_DEFAULT_OTP}>:ext/common/template/otp_flash.c>
         $<$<BOOL:${PLATFORM_DEFAULT_PROVISIONING}>:ext/common/provisioning.c>
+)
+
+# If this is not added to the tfm_s it will not correctly override the weak
+# default handlers declared in assemebly, and will instead be discarded as they
+# are not in use.
+target_sources(tfm_s
+    PRIVATE
+        ext/common/faults.c
 )
 
 target_link_libraries(platform_s
