COSE: Enable COSE algorithm ES384/512
Enable the usage of COSE algorithm ES384/512 for
asymmetric crypto, when longer attestation key is used.
These algorithms can remain disabled if symmetric
crypto is enabled.

Change-Id: I873a11e75fd8c8425a61fc7936e5e8c22fce5297
Signed-off-by: David Vincze <david.vincze@arm.com>

--- a/lib/ext/t_cose/CMakeLists.txt
+++ b/lib/ext/t_cose/CMakeLists.txt
@@ -1,5 +1,5 @@
 #-------------------------------------------------------------------------------
-# Copyright (c) 2020-2021, Arm Limited. All rights reserved.
+# Copyright (c) 2020-2022, Arm Limited. All rights reserved.
 #
 # SPDX-License-Identifier: BSD-3-Clause
 #
@@ -23,8 +23,8 @@ target_compile_definitions(tfm_t_cose_defs
         T_COSE_USE_PSA_CRYPTO
         T_COSE_USE_PSA_CRYPTO_FROM_TFM
         T_COSE_DISABLE_CONTENT_TYPE
-        $<$<NOT:$<BOOL:${SYMMETRIC_INITIAL_ATTESTATION}>>:T_COSE_DISABLE_ES384>
-        $<$<NOT:$<BOOL:${SYMMETRIC_INITIAL_ATTESTATION}>>:T_COSE_DISABLE_ES512>
+        $<$<OR:$<NOT:$<STREQUAL:${ATTEST_KEY_BIT_NUM},384>>,$<BOOL:${SYMMETRIC_INITIAL_ATTESTATION}>>:T_COSE_DISABLE_ES384>
+        $<$<OR:$<NOT:$<STREQUAL:${ATTEST_KEY_BIT_NUM},521>>,$<BOOL:${SYMMETRIC_INITIAL_ATTESTATION}>>:T_COSE_DISABLE_ES512>
         $<$<NOT:$<BOOL:${SYMMETRIC_INITIAL_ATTESTATION}>>:T_COSE_DISABLE_SIGN_VERIFY_TESTS>
         $<$<BOOL:${SYMMETRIC_INITIAL_ATTESTATION}>:T_COSE_DISABLE_SIGN1>
         $<$<NOT:$<BOOL:${SYMMETRIC_INITIAL_ATTESTATION}>>:T_COSE_DISABLE_MAC0>
