FPU: Added interrupts for FPU test purposes
Using timer interrupt to test FPU registers protection is not
efficient and direct. This patch involves dedicated test interrupts
respectively for NS and S, which get triggered by software (STIR)
instead of a timer. This change is applied on AN521 and Musca-S1
platforms.

Signed-off-by: Jianliang Shen <jianliang.shen@arm.com>
Change-Id: I3ce92e837fe62f94ce6fd068efedc547c5f6f3c3

--- a/platform/CMakeLists.txt
+++ b/platform/CMakeLists.txt
@@ -65,6 +65,7 @@ target_sources(platform_s
         $<$<OR:$<AND:$<BOOL:${PLATFORM_DEFAULT_NV_COUNTERS}>,$<BOOL:${TFM_PARTITION_PROTECTED_STORAGE}>>,$<BOOL:${PLATFORM_DEFAULT_OTP}>>:ext/common/template/flash_otp_nv_counters_backend.c>
         $<$<BOOL:${PLATFORM_DEFAULT_OTP}>:ext/common/template/otp_flash.c>
         $<$<BOOL:${PLATFORM_DEFAULT_PROVISIONING}>:ext/common/provisioning.c>
+        $<$<OR:$<BOOL:${TEST_S_FPU}>,$<BOOL:${TEST_NS_FPU}>>:${CMAKE_SOURCE_DIR}/platform/ext/common/test_interrupt.c>
 )
 
 # If this is not added to the tfm_s it will not correctly override the weak
