Platform: Remove unused heap
- Set mbedtls_print to tfm_sp_log_printf which does not need heap.
- After that in case of no debug information, heap is not needed.
  Remove heap in link scripts.
- In case of with debug information, heap is used by GNU c lib
  functions like assert, vprintf and so on. Reserve 0x200 bytes
  heap for that.

Signed-off-by: Sherry Zhang <sherry.zhang2@arm.com>
Change-Id: I6874d9a9b4aff5fcc80ad7a14f225cb431dcb363

--- a/platform/CMakeLists.txt
+++ b/platform/CMakeLists.txt
@@ -247,4 +247,5 @@ target_compile_definitions(platform_region_defs
         $<$<BOOL:${TEST_PSA_API}>:PSA_API_TEST_${TEST_PSA_API}>
         $<$<BOOL:${FORWARD_PROT_MSG}>:FORWARD_PROT_MSG=${FORWARD_PROT_MSG}>
         $<$<BOOL:${TFM_CODE_SHARING}>:CODE_SHARING>
+        $<$<OR:$<CONFIG:Debug>,$<CONFIG:relwithdebinfo>>:ENABLE_HEAP>
 )
