Build: Add MCUBoot includes for platform_bl2
Needed for mcuboot_logging.h in boot_hal_bl2.c

Change-Id: If4367beb97ae708dad2d5f7ecbb060f9b5e0f1b5
Signed-off-by: Jamie Fox <jamie.fox@arm.com>

--- a/platform/CMakeLists.txt
+++ b/platform/CMakeLists.txt
@@ -150,6 +150,7 @@ if(BL2)
         PUBLIC
             $<$<BOOL:${CRYPTO_HW_ACCELERATOR}>:${CMAKE_CURRENT_SOURCE_DIR}/ext/accelerator/interface>
             $<$<BOOL:${CRYPTO_HW_ACCELERATOR}>:${MCUBOOT_PATH}/boot/bootutil/include>
+            ${CMAKE_SOURCE_DIR}/bl2/ext/mcuboot/include
     )
 
     target_sources(platform_bl2
