--- a/secure_fw/partitions/firmware_update/tfm_firmware_update.yaml
+++ b/secure_fw/partitions/firmware_update/tfm_firmware_update.yaml
@@ -6,11 +6,12 @@
 #-------------------------------------------------------------------------------
 
 {
-  "psa_framework_version": 1.0,
+  "psa_framework_version": 1.1,
   "name": "TFM_SP_FWU",
   "type": "PSA-ROT",
   "priority": "NORMAL",
-  "entry_point": "tfm_fwu_init",
+  "model": "SFN",  
+  "entry_init": "tfm_fwu_entry",
   "stack_size": "0x600",
   "secure_functions": [
     {
@@ -58,46 +59,14 @@
   ],
   "services" : [
     {
-      "name": "TFM_FWU_WRITE",
+      "name": "TFM_FIRMWARE_UPDATE_SERVICE",
       "sid": "0x000000A0",
       "non_secure_clients": true,
+      "connection_based": false,
+      "stateless_handle": 5,
       "version": 1,
-      "version_policy": "STRICT"
-    },
-    {
-      "name": "TFM_FWU_INSTALL",
-      "sid": "0x000000A1",
-      "non_secure_clients": true,
-      "version": 1,
-      "version_policy": "STRICT"
-    },
-    {
-      "name": "TFM_FWU_ABORT",
-      "sid": "0x000000A2",
-      "non_secure_clients": true,
-      "version": 1,
-      "version_policy": "STRICT"
-    },
-    {
-      "name": "TFM_FWU_QUERY",
-      "sid": "0x000000A3",
-      "non_secure_clients": true,
-      "version": 1,
-      "version_policy": "STRICT"
-    },
-    {
-      "name": "TFM_FWU_REQUEST_REBOOT",
-      "sid": "0x000000A4",
-      "non_secure_clients": true,
-      "version": 1,
-      "version_policy": "STRICT"
-    },
-    {
-      "name": "TFM_FWU_ACCEPT",
-      "sid": "0x000000A5",
-      "non_secure_clients": true,
-      "version": 1,
-      "version_policy": "STRICT"
+      "version_policy": "STRICT",
+      "mm_iovec": "disable",
     }
   ],
   "dependencies": [
