--- a/secure_fw/partitions/platform/tfm_platform.yaml
+++ b/secure_fw/partitions/platform/tfm_platform.yaml
@@ -1,5 +1,5 @@
 #-------------------------------------------------------------------------------
-# Copyright (c) 2018-2020, Arm Limited. All rights reserved.
+# Copyright (c) 2018-2022, Arm Limited. All rights reserved.
 #
 # SPDX-License-Identifier: BSD-3-Clause
 #
@@ -30,7 +30,7 @@
      {
        "name": "TFM_SP_PLATFORM_NV_COUNTER",
        "sid": "0x00000042",
-       "non_secure_clients": false,
+       "non_secure_clients": true,
        "version": 1,
        "version_policy": "STRICT"
      }
@@ -55,14 +55,14 @@
      {
        "name": "TFM_SP_PLATFORM_NV_COUNTER_READ",
        "signal": "PLATFORM_SP_NV_COUNTER_READ",
-       "non_secure_clients": false,
+       "non_secure_clients": true,
        "minor_version": 1,
        "minor_policy": "STRICT"
       },
       {
         "name": "TFM_SP_PLATFORM_NV_COUNTER_INCREMENT",
         "signal": "PLATFORM_SP_NV_COUNTER_INCREMENT",
-        "non_secure_clients": false,
+        "non_secure_clients": true,
         "minor_version": 1,
         "minor_policy": "STRICT"
        }
