--- a/secure_fw/partitions/protected_storage/tfm_protected_storage.yaml
+++ b/secure_fw/partitions/protected_storage/tfm_protected_storage.yaml
@@ -64,6 +64,6 @@
   "dependencies": [
     "TFM_CRYPTO",
     "TFM_INTERNAL_TRUSTED_STORAGE_SERVICE",
-    "TFM_SP_PLATFORM_NV_COUNTER"
+    "TFM_PLATFORM_SERVICE"
   ]
 }
