--- a/secure_fw/partitions/psa_proxy/tfm_psa_proxy.yaml
+++ b/secure_fw/partitions/psa_proxy/tfm_psa_proxy.yaml
@@ -56,28 +56,13 @@
       "version_policy": "STRICT"
     },
     {
-      "name": "TFM_SP_PLATFORM_SYSTEM_RESET",
+      "name": "TFM_PLATFORM_SERVICE",
       "sid": "0x00000040",
       "non_secure_clients": true,
-      "connection_based": true,
+      "connection_based": false,
+      "stateless_handle": 6,
       "minor_version": 1,
       "minor_policy": "STRICT"
-    },
-    {
-      "name": "TFM_SP_PLATFORM_IOCTL",
-      "sid": "0x00000041",
-      "non_secure_clients": true,
-      "connection_based": true,
-      "minor_version": 1,
-      "minor_policy": "STRICT"
-    },
-    {
-      "name": "TFM_SP_PLATFORM_NV_COUNTER",
-      "sid": "0x00000042",
-      "non_secure_clients": false,
-      "connection_based": true,
-      "version": 1,
-      "version_policy": "STRICT"
     },
     {
       "name": "TFM_PROTECTED_STORAGE_SERVICE",
