SPM: Use dedicated instrutions to clear context
There are dedicated context clearing instructions since v8.1m, use
them could save quite a few instructions.

Also, apply extra FP context clearing actions for v8.0m NS jump.

Still doing the jump in assembly code, this could control the context
accurately. As the NSPE launch is not a standard NS call, it has less
significance to apply the CMSE NS call feature.

Signed-off-by: Ken Liu <Ken.Liu@arm.com>
Change-Id: I22d56ea93b8318585eee511f9a66ce632961de13

--- a/secure_fw/partitions/ns_agent_tz/CMakeLists.txt
+++ b/secure_fw/partitions/ns_agent_tz/CMakeLists.txt
@@ -18,20 +18,24 @@ if(NOT TFM_PSA_API)
     return()
 endif()
 
-target_sources(tfm_spm
-    PRIVATE
-        ${CMAKE_CURRENT_SOURCE_DIR}/ns_agent_tz.c
-)
-
 target_sources(tfm_partitions
     INTERFACE
         ${CMAKE_CURRENT_SOURCE_DIR}/load_info_ns_agent_tz.c
 )
 
+set(ARM_V80M_ARCH armv8-m.base armv8-m.main)
+
+# Trustzone NS Agent is tighly coupled with SPM
+target_sources(tfm_spm
+    PRIVATE
+        ${CMAKE_CURRENT_SOURCE_DIR}/ns_agent_tz_init.c
+        "$<$<IN_LIST:${TFM_SYSTEM_ARCHITECTURE},${ARM_V80M_ARCH}>:${CMAKE_CURRENT_SOURCE_DIR}/ns_agent_tz_v80m.c>"
+        "$<$<NOT:$<IN_LIST:${TFM_SYSTEM_ARCHITECTURE},${ARM_V80M_ARCH}>>:${CMAKE_CURRENT_SOURCE_DIR}/ns_agent_tz.c>"
+)
+
 # If this is added to the spm, it is discarded as it is not used. Since the
 # spm is a static library it can't generate veneers under all compilers so
-# instead this single file is added to the tfm_s target.
-set(ARM_V80M_ARCH armv8-m.base armv8-m.main)
+# instead this single file is added to the 'tfm_s' target.
 target_sources(tfm_s
     PRIVATE
         "$<$<IN_LIST:${TFM_SYSTEM_ARCHITECTURE},${ARM_V80M_ARCH}>:${CMAKE_CURRENT_SOURCE_DIR}/psa_api_veneers_v80m.c>"
