FWU: Enable MM_IOVEC in FWU
Signed-off-by: Sherry Zhang <sherry.zhang2@arm.com>
Change-Id: I8030e46ef171438dc00675df6e15fa9dceb9e5e4

--- a/secure_fw/partitions/firmware_update/tfm_firmware_update.yaml
+++ b/secure_fw/partitions/firmware_update/tfm_firmware_update.yaml
@@ -66,7 +66,7 @@
       "stateless_handle": 5,
       "version": 1,
       "version_policy": "STRICT",
-      "mm_iovec": "disable",
+      "mm_iovec": "enable",
     }
   ],
   "dependencies": [
