RSS: Implement host ROTPKs
Change-Id: I6daf0954d9d692646b9d4588bb45947123189ceb
Signed-off-by: Raef Coles <raef.coles@arm.com>

--- a/platform/CMakeLists.txt
+++ b/platform/CMakeLists.txt
@@ -142,7 +142,7 @@ if(TFM_PARTITION_CRYPTO)
     target_include_directories(platform_crypto_keys
         PRIVATE
             $<$<BOOL:${PLATFORM_DEFAULT_CRYPTO_KEYS}>:${CMAKE_SOURCE_DIR}/interface/include/crypto_keys>
-            $<$<BOOL:${PLATFORM_DEFAULT_CRYPTO_KEYS}>:${CMAKE_BINARY_DIR}/generated/interface/include>
+            ${CMAKE_BINARY_DIR}/generated/interface/include
     )
 
     target_compile_definitions(platform_crypto_keys
