Crypto: Disable single-part operations in Profile Small
Support multi-part operations only in Profile Small to optimize code
size and memory footprint.
Shorten memory buffer length accordingly in Crypto service, used as
Mbed TLS library heap.
Decrease 2.6KB code size and 1KB ZI data with this commit.

Multi-part operations fit better in Profile Small usage scenarios on
extremely resource constrained devices.

Change-Id: I44872986742e5abe96e1e88dd53485d4c8d649d4
Signed-off-by: David Hu <david.hu@arm.com>

--- a/secure_fw/partitions/crypto/CMakeLists.txt
+++ b/secure_fw/partitions/crypto/CMakeLists.txt
@@ -76,6 +76,7 @@ target_compile_definitions(tfm_psa_rot_partition_crypto
         $<$<BOOL:${CRYPTO_ENGINE_BUF_SIZE}>:TFM_CRYPTO_ENGINE_BUF_SIZE=${CRYPTO_ENGINE_BUF_SIZE}>
         $<$<BOOL:${CRYPTO_CONC_OPER_NUM}>:TFM_CRYPTO_CONC_OPER_NUM=${CRYPTO_CONC_OPER_NUM}>
         $<$<AND:$<BOOL:${TFM_PSA_API}>,$<BOOL:${CRYPTO_IOVEC_BUFFER_SIZE}>>:TFM_CRYPTO_IOVEC_BUFFER_SIZE=${CRYPTO_IOVEC_BUFFER_SIZE}>
+        $<$<BOOL:${CRYPTO_SINGLE_PART_FUNCS_DISABLED}>:CRYPTO_SINGLE_PART_FUNCS_DISABLED>
 )
 
 ################ Display the configuration being applied #######################
